# sequential

./: sequential.cabal
Example/: Main.hs
Score/: Main.hs
resources/: example.scd  instruments.json  score-test
src/: Main.hs  Sequential.hs  Sequential2.hs  Sequential3.hs  Sequential4.hs
test/: Test.hs
