name:                sequential
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/quesebifurcan/sequential#readme
license:             BSD3
license-file:        LICENSE
author:              Fredrik Wallberg
copyright:           2016 Fredrik Wallberg
category:            Music
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Sequential, Sequential4
  build-depends:       base >= 4.7 && < 5,
                       protolude >= 0.1,
                       either >= 4,
                       aeson >= 0.11,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       QuickCheck >= 2.8,
                       mtl >= 2.2,
                       dlist >= 0.8,
                       random >= 1.1,
                       wl-pprint-text,
                       monad-loops,
                       transformers >= 0.5,
                       pretty-show,
                       HUnit,
                       monad-loops >= 0.4,
                       validation,
                       logict

test-suite sequential-test
 type:                exitcode-stdio-1.0
 hs-source-dirs:      test
 main-is:             Test.hs
 build-depends:       base,
                      sequential >= 0.1,
                      protolude >= 0.1,
                      either >= 4,
                      aeson >= 0.11,
                      bytestring >= 0.10,
                      containers >= 0.5,
                      QuickCheck >= 2.8,
                      mtl >= 2.2,
                      dlist >= 0.8,
                      random >= 1.1,
                      wl-pprint-text,
                      monad-loops,
                      transformers >= 0.5,
                      HUnit
 ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 default-language:    Haskell2010

executable sequential-example
  hs-source-dirs:      Example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       protolude >= 0.1,
                       either >= 4,
                       aeson >= 0.11,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       QuickCheck >= 2.8,
                       mtl >= 2.2,
                       dlist >= 0.8,
                       random >= 1.1,
                       wl-pprint-text,
                       sequential >= 0.1,
                       monad-loops

executable score
  hs-source-dirs:      Score
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       protolude >= 0.1,
                       either >= 4,
                       aeson >= 0.11,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       QuickCheck >= 2.8,
                       mtl >= 2.2,
                       dlist >= 0.8,
                       random >= 1.1,
                       wl-pprint-text,
                       sequential >= 0.1,
                       monad-loops